[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixie = { path = "../../" }
sycamore = "0.7.1"
log = "0.4.14"
console_log = "0.2.0"
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.6"